# assure-package-cleaner

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  spectra-assure-portal-api-openapi.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  scan.yml  security.yml
src/assure_package_cleaner/: __main__.py  cleaner.py  client.py  config.py
tests/: test_cleaner.py  test_client.py  test_config.py  test_placeholder.py
