[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assure-package-cleaner"
version = "0.1.0"
description = "Deletes stale packages from the Spectra Assure portal based on a configurable retention period"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "requests>=2.33.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "mypy>=1.10",
  "pytest>=8.0",
  "types-requests>=2.31",
]

[project.scripts]
assure-package-cleaner = "assure_package_cleaner.__main__:main"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # bugbear
]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
